--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "Foo-x.com",
   "version": "0.1.0",
   "dependencies": {
+    "fontsource-noto-sans-jp": "^3.0.9",
+    "fontsource-noto-serif-jp": "^3.0.3",
+    "fontsource-roboto": "^3.0.3",
+    "fontsource-vollkorn": "^3.0.3",
     "gatsby": "^2.25.3",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-feed": "^2.6.0",
     "gatsby-plugin-google-analytics": "^2.4.0",
     "gatsby-plugin-manifest": "^2.5.2",
     "gatsby-plugin-offline": "^3.3.2",
+    "gatsby-plugin-preload-fonts": "^1.2.30",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sharp": "^2.7.1",
     "gatsby-remark-copy-linked-files": "^2.3.19",
@@ -23,9 +28,7 @@
     "prismjs": "^1.22.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75"
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "prettier": "2.1.2"
@@ -37,6 +40,7 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "preload-fonts": "gatsby-preload-fonts"
   }
 }
