--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "fontsource-noto-sans-jp": "^3.0.9",
     "fontsource-noto-serif-jp": "^3.0.3",
     "fontsource-roboto": "^3.0.3",
-    "fontsource-vollkorn": "^3.0.3",
+    "fontsource-source-serif-pro": "^3.0.10",
     "gatsby": "^2.25.3",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-feed": "^2.6.0",
