--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-share": "^4.3.1"
+    "react-share": "^4.3.1",
+    "react-social-icons": "^4.1.0"
   },
   "devDependencies": {
     "prettier": "2.1.2"
