--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-remark-autolink-headers": "^2.6.0",
     "gatsby-remark-copy-linked-files": "^2.3.19",
     "gatsby-remark-images": "^3.4.1",
+    "gatsby-remark-katex": "^3.5.0",
     "gatsby-remark-line-breaks": "^1.0.0",
     "gatsby-remark-prismjs": "^3.6.0",
     "gatsby-remark-responsive-iframe": "^2.4.17",
@@ -26,6 +27,7 @@
     "gatsby-source-filesystem": "^2.4.1",
     "gatsby-transformer-remark": "^2.9.2",
     "gatsby-transformer-sharp": "^2.5.21",
+    "katex": "^0.12.0",
     "prismjs": "^1.22.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
