--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-source-filesystem": "^2.4.1",
     "gatsby-transformer-remark": "^2.9.2",
     "gatsby-transformer-sharp": "^2.5.21",
+    "gh-pages": "^3.1.0",
     "katex": "^0.12.0",
     "prismjs": "^1.22.0",
     "react": "^16.12.0",
@@ -46,6 +47,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "deploy": "gatsby clean && gatsby build && gh-pages -d public",
     "preload-fonts": "gatsby-preload-fonts"
   }
 }
