--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "svg.preview.background": "custom",
     "conventionalCommits.scopes": [
-        "blog"
+        "blog",
+        "style"
     ],
 }
