perf(page): set breakpoints

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "svg.preview.background": "custom",
     "conventionalCommits.scopes": [
         "blog",
-        "style"
+        "style",
+        "page"
     ],
 }
