--- a/package.json
+++ b/package.json
@@ -4,34 +4,34 @@
   "description": "foo-x",
   "version": "0.1.0",
   "dependencies": {
-    "fontsource-noto-sans-jp": "^3.0.9",
-    "fontsource-roboto": "^3.0.3",
-    "gatsby": "^2.25.3",
-    "gatsby-image": "^2.4.21",
-    "gatsby-plugin-feed": "^2.6.0",
-    "gatsby-plugin-manifest": "^2.5.2",
-    "gatsby-plugin-offline": "^3.3.2",
-    "gatsby-plugin-preload-fonts": "^1.2.30",
-    "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sharp": "^2.7.1",
-    "gatsby-plugin-sitemap": "^2.8.0",
-    "gatsby-remark-autolink-headers": "^2.6.0",
-    "gatsby-remark-copy-linked-files": "^2.3.19",
+    "fontsource-noto-sans-jp": "^3.1.5",
+    "fontsource-roboto": "^3.1.5",
+    "gatsby": "^3.0.0",
+    "gatsby-plugin-feed": "^3.0.0",
+    "gatsby-plugin-image": "^1.0.0",
+    "gatsby-plugin-manifest": "^3.0.0",
+    "gatsby-plugin-offline": "^4.0.0",
+    "gatsby-plugin-preload-fonts": "^2.0.0",
+    "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-plugin-sharp": "^3.0.0",
+    "gatsby-plugin-sitemap": "^3.0.0",
+    "gatsby-remark-autolink-headers": "^3.0.0",
+    "gatsby-remark-copy-linked-files": "^3.0.0",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^3.4.1",
-    "gatsby-remark-line-breaks": "^1.0.0",
-    "gatsby-remark-prismjs": "^3.6.0",
-    "gatsby-remark-responsive-iframe": "^2.4.17",
-    "gatsby-remark-smartypants": "^2.3.13",
-    "gatsby-source-filesystem": "^2.4.1",
-    "gatsby-transformer-remark": "^2.9.2",
-    "gatsby-transformer-sharp": "^2.5.21",
-    "gh-pages": "^3.1.0",
-    "prismjs": "^1.22.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "gatsby-remark-images": "^4.0.0",
+    "gatsby-remark-prismjs": "^4.0.0",
+    "gatsby-remark-responsive-iframe": "^3.0.0",
+    "gatsby-remark-smartypants": "^3.0.0",
+    "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-transformer-remark": "^4.0.0",
+    "gatsby-transformer-sharp": "^3.0.0",
+    "gh-pages": "^3.2.3",
+    "postcss": "^8.4.5",
+    "prismjs": "^1.26.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-helmet": "^5.2.1",
-    "react-share": "^4.3.1",
+    "react-share": "^4.4.0",
     "react-social-icons": "^4.1.0"
   },
   "devDependencies": {
