--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "foo-x",
   "version": "0.1.0",
   "dependencies": {
-    "fontsource-noto-sans-jp": "^3.1.5",
-    "fontsource-roboto": "^3.1.5",
+    "@fontsource/noto-sans-jp": "^4.5.4",
+    "@fontsource/roboto": "^4.5.3",
     "gatsby": "^4.5.5",
     "gatsby-plugin-feed": "^4.5.0",
     "gatsby-plugin-image": "^2.5.2",
