--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fontsource/roboto": "^4.5.3",
     "gatsby": "^4.5.5",
     "gatsby-plugin-feed": "^4.5.0",
+    "gatsby-plugin-google-gtag": "^4.7.0",
     "gatsby-plugin-image": "^2.5.2",
     "gatsby-plugin-manifest": "^4.5.2",
     "gatsby-plugin-offline": "^5.5.2",
