--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "react-social-icons": "^5.15.0"
   },
   "devDependencies": {
-    "prettier": "2.8.4"
+    "@types/react-dom": "^18.0.11",
+    "prettier": "2.8.4",
+    "typescript": "^4.9.5",
+    "typescript-plugin-css-modules": "^4.2.2"
   },
   "license": "UNLICENSED",
   "scripts": {
@@ -44,6 +47,7 @@
     "serve": "gatsby serve -H 0.0.0.0",
     "clean": "gatsby clean",
     "deploy": "gatsby clean && gatsby build && gh-pages -d public",
-    "preload-fonts": "gatsby-preload-fonts && node bin/removeBase64.js"
+    "preload-fonts": "gatsby-preload-fonts && node bin/removeBase64.js",
+    "type-check": "tsc"
   }
 }
