--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-share": "^4.4.1",
-    "react-social-icons": "^5.15.0"
+    "react-social-icons": "^5.15.0",
+    "use-debounce": "^9.0.3"
   },
   "devDependencies": {
     "@types/react-dom": "^18.0.11",
