--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-dom": "^18.2.0",
     "react-share": "^4.4.1",
     "react-social-icons": "^5.15.0",
-    "use-debounce": "^9.0.3"
+    "use-debounce": "^9.0.3",
+    "wicg-inert": "^3.1.2"
   },
   "devDependencies": {
     "@types/react-dom": "^18.0.11",
