--- a/package.json
+++ b/package.json
@@ -36,9 +36,21 @@
   },
   "devDependencies": {
     "@types/react-dom": "^18.0.11",
-    "prettier": "2.8.4",
-    "typescript": "^4.9.5",
-    "typescript-plugin-css-modules": "^4.2.2"
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "eslint": "^8.36.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "2.8.5",
+    "typescript": "^5.0.2",
+    "typescript-plugin-css-modules": "^4.2.3"
   },
   "license": "UNLICENSED",
   "scripts": {
@@ -50,6 +62,12 @@
     "clean": "gatsby clean",
     "deploy": "gatsby clean && gatsby build && gh-pages -d public",
     "preload-fonts": "gatsby-preload-fonts && node bin/removeBase64.js",
+    "lint": "run-p lint:*",
+    "lint:eslint": "eslint --ext .js,.jsx,.ts,.tsx .",
+    "lint:prettier": "prettier . --check",
+    "fmt": "run-s fmt:prettier fmt:eslint",
+    "fmt:eslint": "npm run lint:eslint -- --fix",
+    "fmt:prettier": "npm run lint:prettier -- --write",
     "type-check": "tsc"
   }
 }
