--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-remark-copy-linked-files": "^6.7.0",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "^7.7.0",
+    "gatsby-remark-mermaid": "^4.0.0",
     "gatsby-remark-prismjs": "^7.7.0",
     "gatsby-remark-responsive-iframe": "^6.7.0",
     "gatsby-remark-smartypants": "^6.7.0",
@@ -27,6 +28,7 @@
     "gh-pages": "^5.0.0",
     "postcss": "^8.4.21",
     "prismjs": "^1.29.0",
+    "puppeteer": "^21.3.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-share": "^4.4.1",
